fixed bug that break the app if article that...
doesn't exist in the database was fetched and modified
css class to correctly centered in the page

--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,10 @@ a {
   text-align: center;
   background-color: var(--second-background-color);
   padding: 50px;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .page-not-found-error > a {
